Fixed issues with BG image on mobile

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -7,6 +7,13 @@ body {
 	background-size: cover;
 	background-repeat: repeat-y;
 }
+
+@media(max-width: 768px){
+	body {
+		background: #2a2a2a;
+	}
+}
+
 html, body{
 	height: 100%;
 }
